--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
 
         <TextView   android:id="@+id/lblPracticas"
             android:layout_weight=".8"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:gravity="end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
