--- a/app/src/main/res/layout/entrada_practica.xml
+++ b/app/src/main/res/layout/entrada_practica.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content" />
 
     <TextView   android:id="@+id/lblTrabajo"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
