Added menus and shared preferences store

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content">
 
         <Button android:id="@+id/btInserta"
-            android:text="+"
+            android:text="@string/lbl_inserta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
