--- a/app/src/main/res/layout/activity_nueva_practica.xml
+++ b/app/src/main/res/layout/activity_nueva_practica.xml
@@ -14,6 +14,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:text="@string/lbl_asignatura" />
 
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
+            android:layout_marginEnd="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
